--- a/origi.env
+++ b/origi.env
@@ -6,10 +6,10 @@ APP_URL=http://localhost
 
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
-DB_PORT=8889
-DB_DATABASE=cadastroImobiliario
-DB_USERNAME=root
-DB_PASSWORD=root
+DB_PORT=3306
+DB_DATABASE=traves9_rogerioimoveispe
+DB_USERNAME=traves9_rogerioi
+DB_PASSWORD=pbWn7f!VJ^Q_
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
